testsuite/bsc.evaluator/errors/LogZero.bsv
(* synthesize *)
module sysLogZero();
   rule test;
      Integer x = 0;
      $display(log2(x));
      $finish(0);
   endrule
endmodule
